--- a/mealify/View/Base.lproj/Main.storyboard
+++ b/mealify/View/Base.lproj/Main.storyboard
@@ -806,9 +806,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxq-O5-8pv">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxq-O5-8pv">
                                 <rect key="frame" x="135" y="150" width="10" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="arrowReverse">
                                     <color key="titleColor" red="0.304464864" green="0.304464864" blue="0.304464864" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
@@ -876,9 +875,8 @@
                                     <action selector="girl:" destination="voi-kX-ZXv" eventType="touchUpInside" id="Mcm-NP-KIj"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eFD-X4-IqJ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eFD-X4-IqJ">
                                 <rect key="frame" x="69" y="150" width="34" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="18"/>
                                 <color key="textColor" red="0.70980876684188843" green="0.70979523658752441" blue="0.70980441570281982" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -927,6 +925,7 @@
                         <color key="backgroundColor" red="1" green="0.99971767580000004" blue="0.9990776965" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="Ci6-7U-cIj" firstAttribute="leading" secondItem="vk5-fR-zs6" secondAttribute="trailing" constant="27" id="0PR-ry-csC"/>
+                            <constraint firstItem="Nxq-O5-8pv" firstAttribute="leading" secondItem="eFD-X4-IqJ" secondAttribute="trailing" constant="32" id="1FB-qB-34h"/>
                             <constraint firstItem="9xQ-NZ-048" firstAttribute="top" secondItem="kbS-Ee-be1" secondAttribute="bottom" constant="16" id="AkG-2v-eGN"/>
                             <constraint firstItem="KCs-m2-LQB" firstAttribute="bottom" secondItem="nV0-N8-RKw" secondAttribute="bottom" constant="613" id="E9A-Wp-LFA"/>
                             <constraint firstItem="kbS-Ee-be1" firstAttribute="leading" secondItem="nV0-N8-RKw" secondAttribute="trailing" constant="87" id="HGz-aw-uWk"/>
@@ -934,7 +933,11 @@
                             <constraint firstItem="Ci6-7U-cIj" firstAttribute="leading" secondItem="kbS-Ee-be1" secondAttribute="trailing" constant="-27" id="NKm-0Q-dha"/>
                             <constraint firstItem="KCs-m2-LQB" firstAttribute="trailing" secondItem="nV0-N8-RKw" secondAttribute="trailing" constant="331" id="Nwx-TG-o9k"/>
                             <constraint firstItem="vk5-fR-zs6" firstAttribute="top" secondItem="kbS-Ee-be1" secondAttribute="bottom" constant="16" id="OiT-TC-Pyn"/>
+                            <constraint firstItem="eFD-X4-IqJ" firstAttribute="top" secondItem="9xQ-NZ-048" secondAttribute="bottom" constant="22" id="QVn-RU-nc9"/>
                             <constraint firstItem="vk5-fR-zs6" firstAttribute="leading" secondItem="9xQ-NZ-048" secondAttribute="trailing" constant="31" id="QkI-Kt-LZx"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="trailing" secondItem="eFD-X4-IqJ" secondAttribute="trailing" constant="272" id="bor-2Y-HXJ"/>
+                            <constraint firstItem="eFD-X4-IqJ" firstAttribute="top" secondItem="KCs-m2-LQB" secondAttribute="top" constant="130" id="iu1-n9-epr"/>
+                            <constraint firstItem="eFD-X4-IqJ" firstAttribute="leading" secondItem="KCs-m2-LQB" secondAttribute="leading" constant="69" id="ka1-Jz-cLN"/>
                             <constraint firstItem="nV0-N8-RKw" firstAttribute="leading" secondItem="KCs-m2-LQB" secondAttribute="leading" constant="16" id="o85-wO-XZ1"/>
                             <constraint firstItem="Ci6-7U-cIj" firstAttribute="top" secondItem="kbS-Ee-be1" secondAttribute="bottom" constant="16" id="sRt-IC-H3N"/>
                             <constraint firstItem="nV0-N8-RKw" firstAttribute="top" secondItem="KCs-m2-LQB" secondAttribute="top" constant="12" id="xi5-TG-dyB"/>
@@ -1841,6 +1844,6 @@
         <segue reference="LjZ-LN-p1e"/>
         <segue reference="usW-NJ-2qE"/>
         <segue reference="aun-NV-0SZ"/>
-        <segue reference="Xf6-uQ-aVZ"/>
+        <segue reference="5S2-hR-3uI"/>
     </inferredMetricsTieBreakers>
 </document>
