--- a/mealify/View/Base.lproj/Main.storyboard
+++ b/mealify/View/Base.lproj/Main.storyboard
@@ -806,7 +806,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxq-O5-8pv">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nxq-O5-8pv">
                                 <rect key="frame" x="135" y="150" width="10" height="22"/>
                                 <state key="normal" image="arrowReverse">
                                     <color key="titleColor" red="0.304464864" green="0.304464864" blue="0.304464864" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -825,9 +825,8 @@
                                     <action selector="boy:" destination="voi-kX-ZXv" eventType="touchUpInside" id="Hy9-6x-G8e"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xD4-us-dG7">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xD4-us-dG7">
                                 <rect key="frame" x="234" y="150" width="10" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="arrow">
                                     <color key="titleColor" red="0.304464864" green="0.304464864" blue="0.304464864" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
@@ -835,9 +834,8 @@
                                     <action selector="older:" destination="voi-kX-ZXv" eventType="touchUpInside" id="qd5-Y9-aIk"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VCX-db-UfV">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VCX-db-UfV">
                                 <rect key="frame" x="175" y="150" width="26" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="textColor" red="0.30588459968566895" green="0.30587822198867798" blue="0.30588257312774658" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -845,13 +843,11 @@
                                     <action selector="userOldness:" destination="voi-kX-ZXv" eventType="valueChanged" id="0Gy-CD-d2e"/>
                                 </connections>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Asset 2@300x" translatesAutoresizingMaskIntoConstraints="NO" id="VyZ-zo-HV3">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Asset 2@300x" translatesAutoresizingMaskIntoConstraints="NO" id="VyZ-zo-HV3">
                                 <rect key="frame" x="150" y="225" width="77" height="221"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="cm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Gk-Uz-BRe">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Gk-Uz-BRe">
                                 <rect key="frame" x="341" y="194" width="26" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="18"/>
                                 <color key="textColor" red="0.70980876684188843" green="0.70979523658752441" blue="0.70980441570281982" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -881,16 +877,14 @@
                                 <color key="textColor" red="0.70980876684188843" green="0.70979523658752441" blue="0.70980441570281982" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="160" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5zJ-fv-1fc">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="160" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5zJ-fv-1fc">
                                 <rect key="frame" x="306" y="194" width="36" height="22"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="textColor" red="0.70980876684188843" green="0.70979523658752441" blue="0.70980441570281982" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" name="Gravity-Regular" family="Gravity" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="scale" translatesAutoresizingMaskIntoConstraints="NO" id="fux-2P-GWc">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scale" translatesAutoresizingMaskIntoConstraints="NO" id="fux-2P-GWc">
                                 <rect key="frame" x="320" y="225" width="47" height="194"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="160" minValue="100" maxValue="200" translatesAutoresizingMaskIntoConstraints="NO" id="owr-cB-RYU" customClass="HeightSlider" customModule="mealify" customModuleProvider="target">
                                 <rect key="frame" x="245" y="308" width="194" height="30"/>
@@ -906,9 +900,8 @@
                                     <action selector="heightSlider:" destination="voi-kX-ZXv" eventType="valueChanged" id="P1X-LN-OKW"/>
                                 </connections>
                             </slider>
-                            <button opaque="NO" contentMode="scaleAspectFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NiJ-al-o8U">
+                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NiJ-al-o8U">
                                 <rect key="frame" x="153" y="565" width="69" height="69"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="nextBtn"/>
                                 <connections>
                                     <segue destination="4Ug-Mp-Ewd" kind="show" id="2o1-sN-eqJ"/>
@@ -926,22 +919,50 @@
                         <constraints>
                             <constraint firstItem="Ci6-7U-cIj" firstAttribute="leading" secondItem="vk5-fR-zs6" secondAttribute="trailing" constant="27" id="0PR-ry-csC"/>
                             <constraint firstItem="Nxq-O5-8pv" firstAttribute="leading" secondItem="eFD-X4-IqJ" secondAttribute="trailing" constant="32" id="1FB-qB-34h"/>
+                            <constraint firstItem="NiJ-al-o8U" firstAttribute="top" secondItem="KCs-m2-LQB" secondAttribute="top" constant="545" id="3xd-8T-qZU"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="bottom" secondItem="fux-2P-GWc" secondAttribute="bottom" constant="248" id="9eI-M9-vok"/>
+                            <constraint firstItem="VyZ-zo-HV3" firstAttribute="leading" secondItem="KCs-m2-LQB" secondAttribute="leading" constant="150" id="AP4-Xg-iB8"/>
                             <constraint firstItem="9xQ-NZ-048" firstAttribute="top" secondItem="kbS-Ee-be1" secondAttribute="bottom" constant="16" id="AkG-2v-eGN"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="bottom" secondItem="eFD-X4-IqJ" secondAttribute="bottom" constant="495" id="CYS-P6-zdk"/>
                             <constraint firstItem="KCs-m2-LQB" firstAttribute="bottom" secondItem="nV0-N8-RKw" secondAttribute="bottom" constant="613" id="E9A-Wp-LFA"/>
+                            <constraint firstItem="Nxq-O5-8pv" firstAttribute="top" secondItem="9xQ-NZ-048" secondAttribute="bottom" constant="22" id="EZE-iX-hst"/>
+                            <constraint firstItem="0Gk-Uz-BRe" firstAttribute="top" secondItem="KCs-m2-LQB" secondAttribute="top" constant="174" id="Ffv-IR-xMG"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="bottom" secondItem="NiJ-al-o8U" secondAttribute="bottom" constant="33" id="Gpc-To-2rZ"/>
                             <constraint firstItem="kbS-Ee-be1" firstAttribute="leading" secondItem="nV0-N8-RKw" secondAttribute="trailing" constant="87" id="HGz-aw-uWk"/>
+                            <constraint firstItem="fux-2P-GWc" firstAttribute="leading" secondItem="VyZ-zo-HV3" secondAttribute="trailing" constant="93" id="L8b-eK-lKD"/>
                             <constraint firstItem="9xQ-NZ-048" firstAttribute="leading" secondItem="KCs-m2-LQB" secondAttribute="leading" constant="120" id="LGv-eg-HAd"/>
+                            <constraint firstItem="VCX-db-UfV" firstAttribute="top" secondItem="vk5-fR-zs6" secondAttribute="bottom" constant="16" id="LTz-0F-40J"/>
                             <constraint firstItem="Ci6-7U-cIj" firstAttribute="leading" secondItem="kbS-Ee-be1" secondAttribute="trailing" constant="-27" id="NKm-0Q-dha"/>
                             <constraint firstItem="KCs-m2-LQB" firstAttribute="trailing" secondItem="nV0-N8-RKw" secondAttribute="trailing" constant="331" id="Nwx-TG-o9k"/>
                             <constraint firstItem="vk5-fR-zs6" firstAttribute="top" secondItem="kbS-Ee-be1" secondAttribute="bottom" constant="16" id="OiT-TC-Pyn"/>
+                            <constraint firstItem="VyZ-zo-HV3" firstAttribute="top" secondItem="VCX-db-UfV" secondAttribute="bottom" constant="53" id="P1E-FV-hii"/>
+                            <constraint firstItem="fux-2P-GWc" firstAttribute="top" secondItem="0Gk-Uz-BRe" secondAttribute="bottom" constant="9" id="Q4y-zT-jsH"/>
                             <constraint firstItem="eFD-X4-IqJ" firstAttribute="top" secondItem="9xQ-NZ-048" secondAttribute="bottom" constant="22" id="QVn-RU-nc9"/>
                             <constraint firstItem="vk5-fR-zs6" firstAttribute="leading" secondItem="9xQ-NZ-048" secondAttribute="trailing" constant="31" id="QkI-Kt-LZx"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="bottom" secondItem="xD4-us-dG7" secondAttribute="bottom" constant="495" id="Whq-sZ-kIB"/>
+                            <constraint firstItem="5zJ-fv-1fc" firstAttribute="leading" secondItem="KCs-m2-LQB" secondAttribute="leading" constant="306" id="Y7O-Rh-DBV"/>
                             <constraint firstItem="KCs-m2-LQB" firstAttribute="trailing" secondItem="eFD-X4-IqJ" secondAttribute="trailing" constant="272" id="bor-2Y-HXJ"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="trailing" secondItem="0Gk-Uz-BRe" secondAttribute="trailing" constant="8" id="cWQ-TA-Mly"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="bottom" secondItem="Nxq-O5-8pv" secondAttribute="bottom" constant="495" id="ei2-fm-d9i"/>
+                            <constraint firstItem="VCX-db-UfV" firstAttribute="leading" secondItem="Nxq-O5-8pv" secondAttribute="trailing" constant="30" id="en1-HG-cRD"/>
+                            <constraint firstItem="0Gk-Uz-BRe" firstAttribute="leading" secondItem="5zJ-fv-1fc" secondAttribute="trailing" constant="-1" id="hnN-Ge-akO"/>
+                            <constraint firstItem="xD4-us-dG7" firstAttribute="leading" secondItem="VCX-db-UfV" secondAttribute="trailing" constant="33" id="i7x-fG-836"/>
                             <constraint firstItem="eFD-X4-IqJ" firstAttribute="top" secondItem="KCs-m2-LQB" secondAttribute="top" constant="130" id="iu1-n9-epr"/>
                             <constraint firstItem="eFD-X4-IqJ" firstAttribute="leading" secondItem="KCs-m2-LQB" secondAttribute="leading" constant="69" id="ka1-Jz-cLN"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="trailing" secondItem="VyZ-zo-HV3" secondAttribute="trailing" constant="148" id="kfS-JX-v13"/>
+                            <constraint firstItem="VyZ-zo-HV3" firstAttribute="top" secondItem="xD4-us-dG7" secondAttribute="bottom" constant="53" id="l26-3T-rTf"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="trailing" secondItem="fux-2P-GWc" secondAttribute="trailing" constant="8" id="mfu-3a-n95"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="trailing" secondItem="NiJ-al-o8U" secondAttribute="trailing" constant="153" id="nyv-JR-AGH"/>
                             <constraint firstItem="nV0-N8-RKw" firstAttribute="leading" secondItem="KCs-m2-LQB" secondAttribute="leading" constant="16" id="o85-wO-XZ1"/>
+                            <constraint firstItem="5zJ-fv-1fc" firstAttribute="top" secondItem="KCs-m2-LQB" secondAttribute="top" constant="174" id="osV-F5-5lq"/>
+                            <constraint firstItem="KCs-m2-LQB" firstAttribute="trailing" secondItem="xD4-us-dG7" secondAttribute="trailing" constant="131" id="qAN-IO-vtS"/>
                             <constraint firstItem="Ci6-7U-cIj" firstAttribute="top" secondItem="kbS-Ee-be1" secondAttribute="bottom" constant="16" id="sRt-IC-H3N"/>
+                            <constraint firstItem="NiJ-al-o8U" firstAttribute="top" secondItem="VyZ-zo-HV3" secondAttribute="bottom" constant="119" id="uOx-jd-7wd"/>
+                            <constraint firstItem="fux-2P-GWc" firstAttribute="top" secondItem="5zJ-fv-1fc" secondAttribute="bottom" constant="9" id="vtS-sv-iZK"/>
                             <constraint firstItem="nV0-N8-RKw" firstAttribute="top" secondItem="KCs-m2-LQB" secondAttribute="top" constant="12" id="xi5-TG-dyB"/>
                             <constraint firstItem="kbS-Ee-be1" firstAttribute="top" secondItem="KCs-m2-LQB" secondAttribute="top" constant="31" id="yv9-jt-q5s"/>
+                            <constraint firstItem="NiJ-al-o8U" firstAttribute="leading" secondItem="KCs-m2-LQB" secondAttribute="leading" constant="153" id="zLe-S2-YjM"/>
+                            <constraint firstItem="xD4-us-dG7" firstAttribute="top" secondItem="Ci6-7U-cIj" secondAttribute="bottom" constant="22" id="zoB-gh-7nj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KCs-m2-LQB"/>
                     </view>
@@ -1844,6 +1865,6 @@
         <segue reference="LjZ-LN-p1e"/>
         <segue reference="usW-NJ-2qE"/>
         <segue reference="aun-NV-0SZ"/>
-        <segue reference="5S2-hR-3uI"/>
+        <segue reference="Xf6-uQ-aVZ"/>
     </inferredMetricsTieBreakers>
 </document>
